# quant

./: .gitignore  AGENTS.md  README.md  affected_strategies.md  pyproject.toml
codex_修改后架构/: 01_architecture.md  02_data_layer.md  03_strategy_contract.md  04_backtest_engine.md  05_live_trading.md  06_risk.md  07_ops_monitoring.md  08_project_skeleton.md  09_roadmap.md  10_codex_revision_notes.md  11_m0_m2_开发计划.md  12_m3_paper_开发计划.md  13_m4_qmt_live_开发计划.md  README.md
config/: base.yaml  paper.yaml  paper_real_510300.yaml
data_sample/: adjust_factors.csv  bars_1d.csv  instruments.csv  trade_calendar.csv
research/: INDEX.md  README.md
scripts/: build_akshare_etf_data.py  check_data_dependencies.py  inspect_backtest_artifacts.py  merge_etf_datasets.py  ops.py  report_backtest_artifacts.py  report_backtest_benchmarks.py  report_backtest_sample_splits.py  run_backtest.py  run_paper.py  validate_m3b_signoff.py
strategies/: crypto_trend_breadth.py  dual_ma.py
tests/: paper_golden_strategy.py  test_akshare_etf_dataset.py  test_alerts_monitor.py  test_backtest_artifact_inspector.py  test_backtest_artifact_report.py  test_backtest_benchmark_report.py  test_backtest_clock.py  test_backtest_engine.py  test_backtest_event_journal.py  test_backtest_sample_split_report.py  test_bootstrap.py  test_bps_costs.py  test_calendar.py  test_config.py  test_contract.py  test_crypto_trend_breadth_strategy.py  test_data_dependency_check.py  test_data_service.py  test_dataset_manifest.py  test_execution.py  test_gateway_factory.py  test_import_boundaries.py  test_live_config.py  (+28 more)
(+337 files in other folders)
